<resources>
    <!--我的-->
    <string name="app_name">美加乐</string>
    <string name="y_h">优惠</string>
    <string name="integral">积分</string>
    <string name="my_timeting">我的预约</string>
    <string name="my_record">成长记录</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_store">积分商城</string>
    <string name="my_vip">会员卡</string>
    <string name="my_service_centre">服务中心</string>
    <string name="my_welcome">欢迎评分</string>
    <string name="my_join">加盟合作</string>
    <string name="my_setting_name">昵称</string>
    <string name="my_setting_vip_state">会员状态</string>
    <string name="my_setting_old">生日</string>
    <string name="my_setting_password">支付密码</string>
    <string name="my_setting_setpassword">修改登录密码</string>
    <string name="exit">退出</string>
    <string name="my_save">保存</string>
    <!--发现-->
    <string name="find_store_hot">门店热榜</string>
    <string name="find_store_pull">店家推荐</string>
    <string name="find_more">查看更多</string>
    <string name="close">关闭</string>
    <!--登录-->
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <!--首页 新闻中心-->
    <string name="taobao">新闻\n中心</string>
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="send">发送</string>
<string name="save">保存</string>
</resources>
