<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@color/bg_selector"
    android:orientation="vertical">

    <include layout="@layout/title_util_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_heart"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@drawable/selector_mypage"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/cImage"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_chid"
                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/cImage"
                    android:layout_toRightOf="@+id/cImage"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/iv_vip"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignLeft="@+id/textView"
                    android:layout_alignStart="@+id/textView"
                    android:layout_below="@+id/textView"
                    android:paddingBottom="10dp"
                    android:src="@drawable/happy_mine_vip"
                    android:visibility="invisible" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="50dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/happy_mine_next_header" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_selector" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3"

                >

                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/my_vip"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/bg_selector" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/y_h"
                    android:textSize="16sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/bg_selector" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/integral"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="(非会员)"
                    android:textColor="@color/red_title"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/bg_selector" />

                <TextView
                    android:id="@+id/tv_coupon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="(0)"
                    android:textColor="@color/red_title"
                    android:textSize="14sp" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/bg_selector" />

                <TextView
                    android:id="@+id/tv_integral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="(0)"
                    android:textColor="@color/red_title"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_selector" />

            <RelativeLayout
                android:id="@+id/rl_my_timeting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_mypage"
                android:gravity="center">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/happy_mine_loveheart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:text="@string/my_timeting"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/happy_mine_center_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_selector" />

            <RelativeLayout
                android:id="@+id/rl_record"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_mypage"
                android:gravity="center">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/happy_mine_littletree" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:text="成长相册"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/happy_mine_center_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_selector" />


            <RelativeLayout
                android:id="@+id/rl_store"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_mypage"
                android:gravity="center">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/happy_mine_stores" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:text="@string/my_store"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/happy_mine_center_next" />
            </RelativeLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_selector" />

            <RelativeLayout
                android:id="@+id/rl_service_center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/selector_mypage"
                android:gravity="center">

                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/happy_mine_service" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="45dp"
                    android:text="@string/my_service_centre"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/happy_mine_center_next" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg_selector" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
