<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <include layout="@layout/title_util_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg_white">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/ll_find_store"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/selector_mypage">
<ImageView
    android:layout_width="45dp"
    android:layout_height="45dp"
    android:src="@drawable/happy_find_store"
    android:layout_marginLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_store"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#8E8E8E"
                    />
            </LinearLayout>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/bg_selector"/>
            <LinearLayout
                android:id="@+id/ll_find_storeHot"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/selector_mypage">
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/happy_find_store_hot"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_store_hot"
                    android:textSize="16sp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#8E8E8E"
                    />
            </LinearLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_selector"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/ll_find_storePull"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/selector_mypage">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/happy_find_store_pull"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/find_store_pull"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:textColor="#8E8E8E"
                        />
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/bg_selector"/>
                <LinearLayout
                    android:id="@+id/ll_find_storeHot1"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@drawable/selector_mypage">
                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:src="@drawable/happy_hotstore"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="更多信息"
                        android:textSize="16sp"
                        android:layout_marginLeft="10dp"
                        android:textColor="#8E8E8E"
                        />
                </LinearLayout>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_selector"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:scaleType="centerCrop"
                android:src="@drawable/happy_find_ads"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_selector"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/happy_find_contenthotrecom"
                />
<GridView
    android:id="@+id/gv_find_hot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:numColumns="2"
    android:horizontalSpacing="30dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"/>
            <LinearLayout
                android:id="@+id/ll_find_more"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_more"
                    android:layout_gravity="center"
                    android:textColor="#8E8E8E"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="11dp"
                    android:layout_gravity="center"
                    android:src="@drawable/happy_mine_center_next"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_selector"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/happy_find_contentdayprice"
                />
            <GridView
                android:id="@+id/gv_find_dayPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:horizontalSpacing="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:id="@+id/ll_find_more1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_more"
                    android:layout_gravity="center"
                    android:textColor="#8E8E8E"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="11dp"
                    android:layout_gravity="center"
                    android:src="@drawable/happy_mine_center_next"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/bg_selector"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@drawable/happy_find_contentallused"
                />
            <GridView
                android:id="@+id/gv_find_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numColumns="2"
                android:horizontalSpacing="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <LinearLayout
                android:id="@+id/ll_find_more2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/find_more"
                    android:layout_gravity="center"
                    android:textColor="#8E8E8E"/>
                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="11dp"
                    android:layout_gravity="center"
                    android:src="@drawable/happy_mine_center_next"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
